test/files/pos/t3160.scala
import scala.collection.mutable._
import scala.xml._

class A {
  def f(x: Node): Node = ???
}
